fix: Network name

--- a/Satisfactory/docker-compose.yml
+++ b/Satisfactory/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - PUID=1000
       - STEAMBETA=false
     networks:
-      - satisfactory
+      - satisfactory-network
     restart: unless-stopped
     deploy:
       resources:
