--- a/Satisfactory/docker-compose.yml
+++ b/Satisfactory/docker-compose.yml
@@ -1,32 +1,77 @@
+version: 1.0
+
+x-common: &common_server
+  image: 'wolveix/satisfactory-server:latest'
+  ports:
+    - '7777:7777/tcp'
+    - '7777:7777/udp'
+    - '8888:8888/tcp'
+  volumes:
+    - './satisfactory-server:/config'
+  environment:
+    - MAXPLAYERS=4
+    - PGID=1000
+    - PUID=1000
+    - STEAMBETA=false
+  restart: unless-stopped
+  deploy:
+    resources:
+      limits:
+        memory: 8G
+      reservations:
+        memory: 4G
+
+    
 services:
   satisfactory-server-01:
-    container_name: 'satisfactory-50'
-    hostname: 'satisfactory-server-50'
-    image: 'wolveix/satisfactory-server:latest'
-    ports:
-      - '7777:7777/tcp'
-      - '7777:7777/udp'
-      - '8888:8888/tcp'
-    volumes:
-      - './satisfactory-server:/config'
-    environment:
-      - MAXPLAYERS=4
-      - PGID=1000
-      - PUID=1000
-      - STEAMBETA=false
+    <<: *common_server
+    container_name: 'satisfactory-01'
+    hostname: 'satisfactory-01'
+  
     networks:
-      - satisfactory-network
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 8G
-        reservations:
-          memory: 4G
+      satisfactory-network:
+        ipv4_address: 172.20.0.11
+
+  satisfactory-server-02:
+    <<: *common_server
+    container_name: 'satisfactory-02'
+    hostname: 'satisfactory-02'
+  
+    networks:
+      satisfactory-network:
+        ipv4_address: 172.20.0.12
+
+  satisfactory-server-01:
+    <<: *common_server
+    container_name: 'satisfactory-03'
+    hostname: 'satisfactory-03'
+  
+    networks:
+      satisfactory-network:
+        ipv4_address: 172.20.0.13
+
+  satisfactory-server-01:
+    <<: *common_server
+    container_name: 'satisfactory-04'
+    hostname: 'satisfactory-04'
+  
+    networks:
+      satisfactory-network:
+        ipv4_address: 172.20.0.14
+
+  satisfactory-server-01:
+    <<: *common_server
+    container_name: 'satisfactory-05'
+    hostname: 'satisfactory-05'
+  
+    networks:
+      satisfactory-network:
+        ipv4_address: 172.20.0.15
 
 networks:
   satisfactory-network:
     ipam:
       driver: default
       config:
-        - subnet: "172.20.0.0/16"
+        - subnet: 172.20.0.0/16
+          gateway 172.20.0.1
