--- a/Satisfactory/docker-compose.yml
+++ b/Satisfactory/docker-compose.yml
@@ -7,7 +7,8 @@ x-common: &common_server
     - '7777:7777/udp'
     - '8888:8888/tcp'
   volumes:
-    - './satisfactory-server:/config'
+    - ./satisfactory-server:/config
+    - satisfactory-gamefiles:/config/gamefiles
   environment:
     - MAXPLAYERS=4
     - PGID=1000
@@ -75,3 +76,6 @@ networks:
       config:
         - subnet: 172.20.0.0/16
           gateway: 172.20.0.1
+
+volumes:
+  satisfactory-gamefiles:
