--- a/Tools/Traefik/docker-compose.yml
+++ b/Tools/Traefik/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   traefik:
     image: traefik:v3.5
     command:
+      - "--api.dashboard=true"
       # Enabling Docker provider
       - "--providers.docker=true"
       # Do not expose containers unless explicitly told so
