--- a/Tools/Traefik/docker-compose.yml
+++ b/Tools/Traefik/docker-compose.yml
@@ -2,11 +2,12 @@ services:
   traefik:
     image: traefik:v3.5
     command:
-      - "--api.dashboard=true"
+      - --api.dashboard=true
+      - --log.level=DEBUG
       # Enabling Docker provider
-      - "--providers.docker=true"
+      - --providers.docker=true
       # Do not expose containers unless explicitly told so
-      #- "--providers.docker.exposedbydefault=false"
+      - --providers.docker.exposedbydefault=false
       # Entry points
       - "--entrypoints.satisfactory-7777-tcp.address=:7777/tcp"
       - "--entrypoints.satisfactory-7777-udp.address=:7777/udp"
