--- a/Games/Satisfactory/Servers-Chef/server01-docker-compose.yml
+++ b/Games/Satisfactory/Servers-Chef/server01-docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - '7921:7921/udp'
       - '8921:8921/tcp'    
     volumes:
-      - ./satisfactory-server-backup-ds920:/config/backups
-      - ./satisfactory-server-saved-ds920:/config/saved
+      - satisfactory-server-backups-ds920:/config/backups
+      - satisfactory-server-saved-ds920:/config/saved
       - satisfactory-chef-01-gamefiles:/config/gamefiles
       - satisfactory-chef-01-logs:/config/logs
     environment:
@@ -34,3 +34,9 @@ volumes:
     name: satisfactory-chef-01-gamefiles
   satisfactory-chef-01-logs:
     name: satisfactory-chef-01-logs
+  satisfactory-server-saved-ds920:
+    external: true
+    name: satisfactory-server-saved-ds920
+  satisfactory-server-backups-ds920:
+    external: true
+    name: satisfactory-server-backups-ds920
