--- a/Games/Satisfactory/Servers-Enfants/servers-docker-compose.yml
+++ b/Games/Satisfactory/Servers-Enfants/servers-docker-compose.yml
@@ -14,8 +14,8 @@ services:
       - '8931:8931/tcp'
     volumes:
       - satisfactory-ben-01:/config
-      - satisfactory-ben-gamefiles:/config/gamefiles
-      - satisfactory-ben-backups:/config/backups
+      - satisfactory-01-gamefiles:/config/gamefiles
+      - satisfactory-01-backups:/config/backups
     environment:
       - MAXPLAYERS=4
       - PGID=1000
@@ -43,8 +43,8 @@ services:
       - '8932:8932/tcp'
     volumes:
       - satisfactory-phil-01:/config
-      - satisfactory-ben-gamefiles:/config/gamefiles
-      - satisfactory-ben-backups:/config/backups
+      - satisfactory-01-gamefiles:/config/gamefiles
+      - satisfactory-01-backups:/config/backups
     environment:
       - MAXPLAYERS=4
       - PGID=1000
