--- a/Tools/pihole/docker-compose.yml
+++ b/Tools/pihole/docker-compose.yml
@@ -3,14 +3,16 @@ services:
   pihole:
     container_name: pihole
     image: pihole/pihole:latest
+    networks:
+      - frontend
     ports:
       # DNS Ports
       - "53:53/tcp"
       - "53:53/udp"
       # Default HTTP Port
-      - "5080:80/tcp"
+      #- "5080:80/tcp"
       # Default HTTPs Port. FTL will generate a self-signed certificate
-      - "5443:443/tcp"
+      #- "5443:443/tcp"
       # Uncomment the below if using Pi-hole as your DHCP Server
       #- "67:67/udp"
       # Uncomment the line below if you are using Pi-hole as your NTP server
@@ -38,3 +40,7 @@ services:
       # Optional, if Pi-hole should get some more processing time
       - SYS_NICE
     restart: unless-stopped
+
+networks:
+  nginx-proxy-manager_default:
+    external: true
